# orchestra

./: .dockerignore  .env.advanced.example  .env.example  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  GCP.md  PubSub.md  README.md  SECURITY.md  Telemetry.md  add_basic_data.py  add_latest_endpoint_data.py  add_on_prem_data.py  alembic.ini  anyscale_ttft.py  best_metrics.json  call_llama2.py  cloudbuild-benchmark.yaml  cloudbuild.yaml  cloudbuild_on_prem.yaml  cloudbuild_staging.yaml  conftest.py  create_unity_project.py  endpoint_status_test.py  example.py  extract_best.ipynb  extract_best.py  generate_api_reference.py  get_cloud_data.py  inputs.py  mypy.ini  octoai_ttft.py  on_prem_setup.sh  orchestra-handler-service-account.json  otel-collector-config.yml  outage_alerts.py  prompts_long.json  (+20 more)
.cursor/: worktrees.json
.cursor/rules/: local-development-environment.mdc
.github/workflows/: README.md  billing-contact-levy.yml  billing-contact-suspension.yml  billing-health.yml  billing-reconciliation.yml  cleanup-assistant-runtime.yml  cleanup-email-verifications.yml  cleanup-expired-invites.yml  cleanup-expired-space-invites.yml  cleanup-rate-limit-records.yml  cleanup-spending-limit-notifications.yml  cleanup-temp-files.yml  deploy-compute-engine-dataset-evaluation.yml  deploy-compute-engine-deploy-router.yml  deploy-compute-engine-pubsub-2-clickhouse.yml  deploy-compute-engine-train-router.yml  deploy-on-prem.yml  docs.yml  endpoint-status-test.yml  outage-alerts.yml  performance_tests.yml  seed-unity-project-staging.yml  seed-unity-project.yml  smoke-test.yml  staging-deploy-compute-engine-dataset-evaluation.yml  staging-sync.yml  submodule-sync.yml  sync-staging.yml  tests.yml  trigger-default-evals.yml  update-docs.yml  update-litellm.yml  upload-data-for-on-prem.yml  upload-latest-endpoint-data.yml  upload-on-prem-data.yml
.run/pycharm/: Template Python tests.run.xml  __main__.run.xml  build docs.run.xml  pytest for all.run.xml  pytest for test_credits.run.xml  pytest for test_datasets.run.xml  pytest for test_endpoints.run.xml  pytest for test_evaluation.run.xml  pytest for test_orchestra.run.xml  pytest for test_recharge.run.xml  pytest for test_runtime_dynamic_routing.run.xml  pytest for test_supported_endpoints.run.xml  pytest for test_text_generation.run.xml  run.run.xml
backends/: completion.py
batch_eval/: fetch_judgements.py  fetch_queries.py  generic_mp.py  judge_configs.py  request_handling.py  run.py  token_counts.py  web_server.py
batch_eval/data/: email_body.txt
benchmark/: bench.py  benchmark.py  dummy_multi_region.py  perf.py  price_scraper.py  problems.jsonl  readme.md  test.config.yml  utils.py
benchmark/aibench/: README.md  __init__.py  runner.py
dataset_evaluation/: Dockerfile  dataset-evaluation.service  dataset_evaluation.py  dataset_evaluation.service  evaluate_dataset.py  main.py  refresh_scores.py  requirements.txt
dataset_evaluation/tests/: test_dataset_eval.py
dataset_evaluation/utils/: automatic_judgements.py  extract_score.py  fetch_judgements.py  fetch_queries.py  generic_mp.py  helpers.py  judge_configs.py  judge_templates.py  parsing_judge.py  request_handling.py  token_counts.py
deploy/: Dockerfile  cloudbuild.yaml  cloudbuild_preview.yaml  cloudbuild_staging.yaml  docker-compose.dev.yml  docker-compose.otlp.yml  docker-compose.yml  otel.Dockerfile
deploy_router/: .dockerignore  Dockerfile  README.md  deploy_router.py  deploy_router.service  main.py  requirements.txt  router_deployment.py
deploy_router/router_scripts/: dcn.py  main.py
deprecated/: vertex_ai_llama2.py
docs/: body.py  form.py  header.py  index.rst  main.py  mint.py  openapi.yaml  partial_conf.py  path.py  query.py  utils.py
docs/concepts/: benchmarks.rst  endpoints.rst  models.rst  providers.rst  runtime_routing.rst
docs/demos/: demos.rst
docs/home/: build_a_chatbot.rst  getting_access.rst  home.rst  make_your_first_request.rst  pricing.rst
docs/reference/: endpoints.rst  images.rst
docs/tools/: openapi.rst  python_library.rst
logs/: README.md
models/: __init__.py  imagegen.py  llama2.py  llm.py  mistral.py
new_batch_eval/: .batch_eval.py.swp  batch_eval.py  generic_mp.py  main.py  request_handling.py
new_batch_eval/utils/: fetch_judgements.py  fetch_queries.py  generic_mp.py
orchestra/: __init__.py  __main__.py  conftest.py  consts.py  env.py  errors.py  logger.py  logging.py  pricing.py  settings.py
orchestra/db/: README.md  base.py  context_naming.py  dependencies.py  schema.dbml  session.py  sqlite_compat.py  utils.py
orchestra/lib/: __init__.py  billing.py  billing_events.py  fx.py  time.py
orchestra/observability/: Dockerfile  README.md  docker-compose.observability.yml  metrics.py
orchestra/routines/: __init__.py  assistant_contact_levy.py  assistant_contact_notifications.py  assistant_contact_suspension.py  billing_guard.py  billing_health.py  billing_notifications.py  billing_reconciliation.py  email_verification_cleanup.py  inactivity_followup.py  inactivity_notifications.py  monthly_credits_invoicer.py  monthly_invoicer.py  monthly_metered_invoicer.py  rate_limit_cleanup.py  recharging.py  temp_file_cleanup.py
orchestra/services/: __init__.py  assistant_bootstrap.py  assistant_cleanup_service.py  assistant_membership_service.py  bucket_service.py  call_recording_service.py  cartesia_service.py  contact_membership_service.py  contact_sync_service.py  coordinator_service.py  deepgram_service.py  elevenlabs_service.py  hive_service.py  openai_service.py  replicate_service.py  space_cleanup_service.py  space_membership_refresh_service.py  spending_limit_notification_service.py  stripe_client.py  task_machine_state_service.py  (+1 more)
orchestra/vector/: utils.py  (+1 more)
plans/: architect.md  devlog.md  needs_done.md  work_done.md
pubsub_2_clickhouse/: README.md  main.py  pubsub_2_clickhouse.service  requirements.txt
scripts/: local.sh  stripe.sh
train_router/: .train_router.py.swp  Dockerfile  delete_router.py  main.py  requirements.txt  router_training.py  train-router.service  train_router.py
(+1079 files in other folders)
