[tool.poetry]
name = "orchestra"
version = "0.1.0"
description = ""
authors = [

]
maintainers = [

]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
uvicorn = { version = "^0.22.0", extras = ["standard"] }
pydantic = "^2"
pydantic-settings = "^2"
yarl = "^1.9.2"
ujson = "^5.8.0"
SQLAlchemy = {version = "^2.0.18", extras = ["asyncio"]}
alembic = "^1.11.1"
asyncpg = {version = "^0.28.0", extras = ["sa"]}
httptools = "^0.6.0"
prometheus-client = "^0.17.0"
prometheus-fastapi-instrumentator = "6.0.0"
sentry-sdk = "^1.27.1"
opentelemetry-api = "^1.21.0"
opentelemetry-sdk = "^1.21.0"
opentelemetry-exporter-otlp = "^1.21.0"
opentelemetry-instrumentation = "^0.42b0"
opentelemetry-instrumentation-fastapi = "^0.42b0"
opentelemetry-instrumentation-sqlalchemy = "^0.42b0"
loguru = "^0.7.0"
prettytable = "^3.9.0"
boto3 = "^1.34.131"
botocore = "^1.34.131"
google-cloud-aiplatform = "^1.38.1"
psycopg2-binary = "^2.9.9"
tiktoken = "0.7.0"
openai = "^1.12.0"
aiohttp = "^3.9.1"
replicate = "^0.23.1"
aioboto3 = "^13.1.1"
google-cloud-logging = "^3.9.0"
anthropic = "^0.29.0"
stripe = "^8.10.0"
python-multipart = "^0.0.9"
scipy = "^1.13.0"
google-cloud-storage = "^2.16.0"
google-cloud-pubsub = "^2.21.5"
google-cloud-secret-manager = "^2.20.1"
pytest-xdist = {extras = ["psutils"], version = "^3.6.1"}
redis = "^5.0.7"
litellm = "^1.79.0"
shortuuid = "^1.0.13"
unifyai = { git = "https://github.com/unifyai/unify.git" }
clickhouse-connect = "^0.8.9"
opencv-python = "^4.10.0.84"
imagehash = "^4.3.1"
Pillow = "^10.0.0"
python-json-logger = "^3.2.1"
python-logging-loki = "^0.3.1"
wget = "^3.2"
pgvector = "^0.4.1"
aiosmtplib = "^4.0.1"
google-api-python-client = "^2.170.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.2"
python-stdnum = "^2.1"
jsonschema = "^4.25.1"

[tool.poetry.group.dev.dependencies]
types-requests = "*"
pytest = "^8.3.5"
pytest-asyncio = "^0.24.0"
flake8 = "~4.0.1"
mypy = "^1.1.1"
isort = "^5.11.4"
pre-commit = "^3.0.1"
wemake-python-styleguide = "^0.17.0"
black = "^22.12.0"
autoflake = "^1.6.1"
pytest-cov = "^4.0.0"
anyio = "^3.6.2"
pytest-env = "^0.8.1"
httpx = "^0.24.0"
hypothesis = "^6.130.3"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["orchestra",]

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]
env = [
    "ORCHESTRA_ENVIRONMENT=pytest",
    "ORCHESTRA_DB_BASE=orchestra_test",
    "ORCHESTRA_SENTRY_DSN=",
]
addopts = "--dist=loadgroup --cov --cov-report=lcov:lcov.info --cov-report=term"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "manual: marks tests as manual",
    "performance: long-running performance tests",
    "serial: marks tests that must run serially (not in parallel)"
]

[fastapi-template.options]
project_name = "orchestra"
api_type = "rest"
enable_redis = "None"
enable_rmq = "None"
ci_type = "github"
enable_migrations = "True"
enable_taskiq = "None"
enable_kube = "None"
kube_name = "orchestra"
enable_routers = "True"
enable_kafka = "None"
enable_loguru = "True"
traefik_labels = "None"
add_dummy = "True"
orm = "sqlalchemy"
self_hosted_swagger = "None"
prometheus_enabled = "True"
sentry_enabled = "True"
otlp_enabled = "True"
pydanticv1 = "None"
gunicorn = "None"
add_users = "None"
cookie_auth = "None"
jwt_auth = "None"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
